Fix the slight misalignment of the navigation brand and the link

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -201,7 +201,6 @@ em {
 .navbar-brand {
   font-family: $headings-font-family;
   color: $brand !important;
-  margin-bottom: -0.15rem;
 }
 
 .header-separator {
